--- a/src/HuntTheWumpus/dutch.properties
+++ b/src/HuntTheWumpus/dutch.properties
@@ -1,3 +1,8 @@
-directionChangeForbidden=Jij kan niet van hier naar het %s gaan.
+directionChangeForbidden=Jij kan van hier niet naar het %s gaan.
 noExits=Er zijn geen uitgangen.
 directionChange=Jij kan van hier naar het %s gaan.
+east=oosten
+north=noorden
+west=westen
+south=zuiden
+and=en
